--- a/.dist/main.css
+++ b/.dist/main.css
@@ -12,11 +12,12 @@ body {
     color: #F52100;
 }
 
-.panel {
-    padding: 8px;
+.b1 {
+    border: 1px solid #F1F1F8;
+}
 
-    border: 2px dashed #F1F1F8;
-    border-radius: 24px;
+.container {
+    padding: 5px;
 
     display: flex;
     flex-direction: column;
@@ -25,17 +26,38 @@ body {
     gap: 8px;
 }
 
-.panel-section {
-    padding: 8px;
+.n1 {
+    border-radius: 15px;
 
-    border: 1px solid #F1F1F8;
-    border-radius: 16px;
+    padding: 5px;
+}
+
+.n2 {
+    border-radius: 10px;
+    
+    padding: 5px;
+}
+
+.n3 {
+    border-radius: 5px;
+
+    padding: 5px;
+}
+
+.panel-v {
+    border-radius: 20px;
+
+    padding: 5px;
 
     display: flex;
     flex-direction: column;
 }
 
-.panel-container {
+.panel-h {
+    border-radius: 20px;
+
+    padding: 5px;
+
     display: flex;
     flex-direction: row;
     justify-content: start;
@@ -44,7 +66,7 @@ body {
 }
 
 .tabs {
-    padding: 0;
+    padding-left: 25px;
     margin-bottom: 0;
 
     display: flex;
@@ -62,16 +84,9 @@ body {
     text-decoration: none;
 }
 
-.tab-content {
-    border: 1px solid #F1F1F8;
-}
-
 .expanding-label {
     display: flex;
     flex-direction: row;
-
-    margin-top: 0px;
-    margin-bottom: 0px;
 }
 
 input[type=text], input[type=file], input[type=submit] {
